# shortguid-rs

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  tea.yaml
.github/workflows/: rust.yml
examples/: main.rs  shortguid.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_random.rs  encode_random.rs  equals.rs  roundtrip.rs
src/: lib.rs  serde.rs
tests/: serde.rs
