[package]
name = "shortguid"
version = "0.6.0"
edition = "2021"
license = "EUPL-1.2"
description = "Short URL-safe Base64 encoded UUIDs"
repository = "https://github.com/nyris/shortguid-rs"
authors = ["Markus Mayer <m.mayer@nyris.io>"]
readme = "README.md"
rust-version = "1.67.1"

[features]
default = ["random"]
arbitrary = ["uuid/arbitrary", "arbitrary/derive"]
random = ["uuid/v4"]
serde = ["dep:serde", "uuid/serde"]

[[example]]
name = "shortguid"
path = "examples/shortguid.rs"

[[test]]
name = "serde"
path = "tests/serde.rs"
required-features = ["serde"]

[dependencies]
arbitrary = { version = "1.3.0", optional = true }
base64 = "0.21.2"
serde = { version = "1.0.164", optional = true }
uuid = "1.3.4"

[dev-dependencies]
hex = "0.4.3"
clap = "4.3.8"
serde_test = "1.0.164"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
