[package]
name = "shortguid"
version = "0.7.0-unstable"
edition = "2021"
license = "EUPL-1.2"
description = "Short URL-safe Base64 encoded UUIDs"
repository = "https://github.com/nyris/shortguid-rs"
authors = ["Markus Mayer <m.mayer@nyris.io>"]
keywords = ["guid", "uuid", "unique"]
categories = ["data-structures"]
readme = "README.md"
rust-version = "1.67.1"

[features]
default = ["random"]
arbitrary = ["uuid/arbitrary", "arbitrary/derive"]  # Add support for arbitrary types
random = ["uuid/v4"]                                # Create random ShortGuid IDs
fast-rng = ["uuid/fast-rng"]                        # Use a faster (but still sufficiently random) RNG
serde = ["dep:serde", "uuid/serde"]                 # Serialization and deserialization support
# zerocopy = ["dep:zerocopy", "uuid/zerocopy"]        # Zerocopy support
bytemuck = ["dep:bytemuck", "uuid/bytemuck"]        # Bytemuck support

[[example]]
name = "shortguid"
path = "examples/shortguid.rs"

[[test]]
name = "serde"
path = "tests/serde.rs"
required-features = ["serde"]

[dependencies]
arbitrary = { version = "1.3.2", optional = true }
base64 = "0.21.5"
bytemuck = { version = "1.14.0", optional = true, features = ["derive"] }
serde = { version = "1.0.193", optional = true }
uuid = "1.6.1"
zerocopy = { version = "0.7.32", optional = true, features = ["derive"] }

[dev-dependencies]
hex = "0.4.3"
clap = "4.4.11"
serde_test = "1.0.176"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
